--- a/public/bicameral_praying_days_either_house_sitting.rb.html
+++ b/public/bicameral_praying_days_either_house_sitting.rb.html
@@ -15,62 +15,56 @@
       }
       p {line-height: 1.4;}
       code {
-      color:lightsteelblue;
+      color:gray;
+      line-height: 1.4;
       }
       code pre {word-wrap: break-word;}
       code:hover {color:black;}
-      footer {
-      margin:0 auto;
-      color:gray;
-      display:table;
-      }
-      footer big {
-      font-size:2rem;}
-      
       @media (prefers-color-scheme: dark) {
 body {color:white;background-color:black;}
 }
+h1, h2, h3 {font-weight:normal;}
     </style>
     <title>app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb</title>
   </head>
-  <body><a name="top"></a><code title='Line 1, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='1'>1</a> module CALCULATION_BICAMERAL_PRAYING_DAYS_EITHER_HOUSE_SITTING
-</pre></code><a name='3'></a> <h1>A method for calculating scrutiny periods during which <strong>either</strong> House must be sitting or on a short adjournment, used for Commons and Lords negative Statutory Instruments and made affirmative SIs where this is set out by their enabling Act.</h1>
+  <body><a name="top"></a><code title='Line 1, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='1'> 1</a> module CALCULATION_BICAMERAL_PRAYING_DAYS_EITHER_HOUSE_SITTING
+</pre></code><a name='3'></a> <h1>A method for calculating the end date of scrutiny periods during which <strong>either</strong> House must be sitting or on a short adjournment, used for Commons and Lords negative Statutory Instruments and made affirmative SIs where this is set out by their enabling Act.</h1>
 <a name='4'></a> <p>The calculation counts a day whenever either House has a praying day, requiring the laying date and the number of days to count.</p>
-<code title='Line 5, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='5'>5</a>   def bicameral_praying_days_calculation_either_house_sitting( date, target_day_count )
+<code title='Line 5, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='5'> 5</a>   def bicameral_praying_days_calculation_either_house_sitting( date, target_day_count )
 </pre></code><a name='8'></a> <h2>We start counting on the <strong>first day when either House has a praying day</strong>.</h2>
 <a name='9'></a> <p>This may include the laying day of the instrument.</p>
 <a name='10'></a> <p>Unless the laying day is a praying day in either House, then ...</p>
-<code title='Line 11, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='11'>11</a>     unless date.is_commons_praying_day? or date.is_lords_praying_day?
+<code title='Line 11, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='11'> 11</a>     unless date.is_commons_praying_day? or date.is_lords_praying_day?
 </pre></code><a name='13'></a> <p>... if there is a future praying day in either House ...</p>
-<code title='Line 14, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='14'>14</a>       if date.first_praying_day_in_either_house
+<code title='Line 14, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='14'> 14</a>       if date.first_praying_day_in_either_house
 </pre></code><a name='16'></a> <p>... we set the date to that day.</p>
-<code title='Line 17, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='17'>17</a>         date = date.first_praying_day_in_either_house 
+<code title='Line 17, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='17'> 17</a>         date = date.first_praying_day_in_either_house 
 </pre></code><a name='19'></a> <p>If we didn&#39;t find a <strong>future praying day in either House</strong> in our calendar, we can&#39;t calculate the scrutiny period, ...</p>
-<code title='Line 20, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='20'>20</a>       else
+<code title='Line 20, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='20'> 20</a>       else
 </pre></code><a name='22'></a> <p>... this error message is displayed ...</p>
-<code title='Line 23, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='23'>23</a>         @error_message = "Unable to find a future praying day in the House of Commons or the House of Lords. It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
+<code title='Line 23, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='23'> 23</a>         @error_message = "Unable to find a future praying day in the House of Commons or the House of Lords. It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
 </pre></code><a name='25'></a> <p>... and we stop looking for a scrutiny period end date.</p>
-<code title='Line 26, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='26'>26</a>         return
-</pre></code><code title='Line 27, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='27'>27</a>       end
+<code title='Line 26, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='26'> 26</a>         return
+</pre></code><code title='Line 27, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='27'> 27</a>       end
 </pre></code><a name='29'></a> <p>Otherwise, we&#39;ve established the laying day is a praying day in at least one House, so we don&#39;t have to cycle through the calendar to find a subsequent one.</p>
-<code title='Line 30, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='30'>30</a>     end
+<code title='Line 30, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='30'> 30</a>     end
 </pre></code><a name='32'></a> <p>We&#39;ve found the first praying day in either House so we start counting from day 1.</p>
-<code title='Line 33, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='33'>33</a>     day_count = 1
+<code title='Line 33, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='33'> 33</a>     day_count = 1
 </pre></code><a name='35'></a> <h2>Whilst the number of praying days we’re counting is less than the target number of days to count ...</h2>
-<code title='Line 36, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='36'>36</a>     while ( day_count < target_day_count ) do
+<code title='Line 36, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='36'> 36</a>     while ( day_count < target_day_count ) do
 </pre></code><a name='38'></a> <p>... continue to the <strong>next day</strong>.</p>
-<code title='Line 39, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='39'>39</a>       date = date.next_day
+<code title='Line 39, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='39'> 39</a>       date = date.next_day
 </pre></code><a name='41'></a> <p>... and add 1 to the day count if this is a praying day in either House.</p>
-<code title='Line 42, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='42'>42</a>       day_count +=1 if date.is_either_house_praying_day?
+<code title='Line 42, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='42'> 42</a>       day_count +=1 if date.is_either_house_praying_day?
 </pre></code><a name='44'></a> <p>... if the calendar has no record of what type of day this is, we can&#39;t calculate the end date, ...</p>
-<code title='Line 45, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='45'>45</a>       if date.is_calendar_not_populated?
+<code title='Line 45, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='45'> 45</a>       if date.is_calendar_not_populated?
 </pre></code><a name='47'></a> <p>... this error message is displayed to users ...</p>
-<code title='Line 48, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='48'>48</a>         @error_message = "It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
+<code title='Line 48, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='48'> 48</a>         @error_message = "It's not currently possible to calculate an anticipated end date, as the likely end date occurs during a period for which sitting days are yet to be announced."
 </pre></code><a name='50'></a> <p>... and we stop looking through the calendar.</p>
-<code title='Line 51, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='51'>51</a>         break
-</pre></code><code title='Line 52, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='52'>52</a>       end
-</pre></code><code title='Line 53, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='53'>53</a>     end
+<code title='Line 51, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='51'> 51</a>         break
+</pre></code><code title='Line 52, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='52'> 52</a>       end
+</pre></code><code title='Line 53, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='53'> 53</a>     end
 </pre></code><a name='55'></a> <p>Return the anticipated end date of the scrutiny period for display.</p>
-<code title='Line 56, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='56'>56</a>     date
-</pre></code><code title='Line 57, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='57'>57</a>   end
-</pre></code><code title='Line 58, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='58'>58</a> end</pre></code><footer><p><big><a href="#top">&times;&times;&times;</a></big></p></footer></body></html>
+<code title='Line 56, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='56'> 56</a>     date
+</pre></code><code title='Line 57, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='57'> 57</a>   end
+</pre></code><code title='Line 58, app/controllers/calculations/bicameral_praying_days_either_house_sitting.rb'><pre><a name='58'> 58</a> end</pre></code><footer></footer></body></html>
