--- a/public/calculator_controller.rb.html
+++ b/public/calculator_controller.rb.html
@@ -6,139 +6,126 @@
     <link rel="alternate" type="text/markdown" href="calculator_controller.rb.md">
     <style>
       body {
-        max-width: 38rem;
+        max-width: 40rem;
         margin: auto;
         padding: 1rem;
-        font-family: system-ui;
+        font-family: 'Helvetica Neue', system-ui;
         color: black;
         background-color: white;
       }
       p {line-height: 1.4;}
       code {
-      color:lightsteelblue;
+      line-height: 1.4;
+      color:gray;
       }
       code pre {word-wrap: break-word;}
       code:hover {color:black;}
-      footer {
-      margin:0 auto;
-      color:gray;
-      display:table;
-      }
-      footer big {
-      font-size:2rem;}
-      
+      h1, h2 {font-weight:normal;}
       @media (prefers-color-scheme: dark) {
 body {color:white;background-color:black;}
 }
     </style>
     <title>app/controllers/calculator_controller.rb</title>
   </head>
-  <body><a name="top"></a><a name='1'></a> <h1>Calculator controller to build the form and run the calculations.</h1>
-<a name='3'></a> <p>Individual calculations for different flavours of instrument are packaged into separate files. This code requires those files to be loaded.</p>
-<code title='Line 4, app/controllers/calculator_controller.rb'><pre><a name='4'>4</a> require 'calculations/bicameral_parliamentary_days'
-</pre></code><code title='Line 5, app/controllers/calculator_controller.rb'><pre><a name='5'>5</a> require 'calculations/bicameral_first_to_ten'
-</pre></code><code title='Line 6, app/controllers/calculator_controller.rb'><pre><a name='6'>6</a> require 'calculations/commons_praying_days'
-</pre></code><code title='Line 7, app/controllers/calculator_controller.rb'><pre><a name='7'>7</a> require 'calculations/bicameral_praying_days_either_house_sitting'
-</pre></code><code title='Line 8, app/controllers/calculator_controller.rb'><pre><a name='8'>8</a> require 'calculations/bicameral_praying_days_both_houses_sitting'
-</pre></code><code title='Line 9, app/controllers/calculator_controller.rb'><pre><a name='9'>9</a> require 'calculations/treaty_period_a'
-</pre></code><code title='Line 10, app/controllers/calculator_controller.rb'><pre><a name='10'>10</a> require 'calculations/commons_parliamentary_days'
-</pre></code><a name='12'></a> <h2>The controller itself.</h2>
-<code title='Line 13, app/controllers/calculator_controller.rb'><pre><a name='13'>13</a> class CalculatorController < ApplicationController
-</pre></code><a name='15'></a> <p>Include code from each of the modules for the different styles of calculation.</p>
-<code title='Line 16, app/controllers/calculator_controller.rb'><pre><a name='16'>16</a>   include CALCULATION_BICAMERAL_PARLIAMENTARY_DAYS
-</pre></code><code title='Line 17, app/controllers/calculator_controller.rb'><pre><a name='17'>17</a>   include CALCULATION_BICAMERAL_FIRST_TO_TEN
-</pre></code><code title='Line 18, app/controllers/calculator_controller.rb'><pre><a name='18'>18</a>   include CALCULATION_COMMONS_PRAYING_DAYS
-</pre></code><code title='Line 19, app/controllers/calculator_controller.rb'><pre><a name='19'>19</a>   include CALCULATION_BICAMERAL_PRAYING_DAYS_EITHER_HOUSE_SITTING
-</pre></code><code title='Line 20, app/controllers/calculator_controller.rb'><pre><a name='20'>20</a>   include CALCULATION_BICAMERAL_PRAYING_DAYS_BOTH_HOUSES_SITTING
-</pre></code><code title='Line 21, app/controllers/calculator_controller.rb'><pre><a name='21'>21</a>   include CALCULATION_TREATY_PERIOD_A
-</pre></code><code title='Line 22, app/controllers/calculator_controller.rb'><pre><a name='22'>22</a>   include CALCULATION_COMMONS_PARLIAMENTARY_DAYS
-</pre></code><a name='24'></a> <h3>This is the code to provide information for the form that users can fill in.</h3>
-<code title='Line 25, app/controllers/calculator_controller.rb'><pre><a name='25'>25</a>   def index
-</pre></code><a name='27'></a> <p>Set a title for the page.</p>
-<code title='Line 28, app/controllers/calculator_controller.rb'><pre><a name='28'>28</a>     @title = "Calculate scrutiny periods"
-</pre></code><a name='30'></a> <p>Find all the active procedures in display order - to populate the procedure radio buttons on the form.</p>
-<code title='Line 31, app/controllers/calculator_controller.rb'><pre><a name='31'>31</a>     @procedures = Procedure.all.where( 'active is true' ).order( 'display_order asc')
-</pre></code><code title='Line 32, app/controllers/calculator_controller.rb'><pre><a name='32'>32</a>   end
-</pre></code><a name='34'></a> <h3>When the user has pressed &#39;Calculate&#39;, this code runs the calculation.</h3>
-<code title='Line 35, app/controllers/calculator_controller.rb'><pre><a name='35'>35</a>   def calculate
-</pre></code><a name='37'></a> <p>Set a title for the page.</p>
-<code title='Line 38, app/controllers/calculator_controller.rb'><pre><a name='38'>38</a> 	  @title = "Calculated scrutiny period"
-</pre></code><a name='40'></a> <p>In order to calculate the scrutiny period, we need:</p>
-<a name='42'></a> <ul>
+  <body><h1>Calculator controller to build the form and run the calculations.</h1>
+<p>Individual calculations for different flavours of instrument are packaged into separate files. This code requires those files to be loaded.</p>
+<code title='Line 4, app/controllers/calculator_controller.rb'><pre><a name='4'> 4</a> require 'calculations/bicameral_parliamentary_days'
+</pre></code><code title='Line 5, app/controllers/calculator_controller.rb'><pre><a name='5'> 5</a> require 'calculations/bicameral_first_to_ten'
+</pre></code><code title='Line 6, app/controllers/calculator_controller.rb'><pre><a name='6'> 6</a> require 'calculations/commons_praying_days'
+</pre></code><code title='Line 7, app/controllers/calculator_controller.rb'><pre><a name='7'> 7</a> require 'calculations/bicameral_praying_days_either_house_sitting'
+</pre></code><code title='Line 8, app/controllers/calculator_controller.rb'><pre><a name='8'> 8</a> require 'calculations/bicameral_praying_days_both_houses_sitting'
+</pre></code><code title='Line 9, app/controllers/calculator_controller.rb'><pre><a name='9'> 9</a> require 'calculations/treaty'
+</pre></code><h2>The controller itself.</h2>
+<code title='Line 12, app/controllers/calculator_controller.rb'><pre><a name='12'> 12</a> class CalculatorController < ApplicationController
+</pre></code><p>Include code from each of the modules for the different styles of calculation.</p>
+<code title='Line 15, app/controllers/calculator_controller.rb'><pre><a name='15'> 15</a>   include CALCULATION_BICAMERAL_PARLIAMENTARY_DAYS
+</pre></code><code title='Line 16, app/controllers/calculator_controller.rb'><pre><a name='16'> 16</a>   include CALCULATION_BICAMERAL_FIRST_TO_TEN
+</pre></code><code title='Line 17, app/controllers/calculator_controller.rb'><pre><a name='17'> 17</a>   include CALCULATION_COMMONS_PRAYING_DAYS
+</pre></code><code title='Line 18, app/controllers/calculator_controller.rb'><pre><a name='18'> 18</a>   include CALCULATION_BICAMERAL_PRAYING_DAYS_EITHER_HOUSE_SITTING
+</pre></code><code title='Line 19, app/controllers/calculator_controller.rb'><pre><a name='19'> 19</a>   include CALCULATION_BICAMERAL_PRAYING_DAYS_BOTH_HOUSES_SITTING
+</pre></code><code title='Line 20, app/controllers/calculator_controller.rb'><pre><a name='20'> 20</a>   include CALCULATION_TREATY
+</pre></code><h3>This is the code to provide information for the form that users can fill in.</h3>
+<code title='Line 23, app/controllers/calculator_controller.rb'><pre><a name='23'> 23</a>   def index
+</pre></code><p>Set a title for the page.</p>
+<code title='Line 26, app/controllers/calculator_controller.rb'><pre><a name='26'> 26</a>     @title = "Calculate scrutiny periods"
+</pre></code><p>Find all the active procedures in display order - to populate the procedure radio buttons on the form.</p>
+<code title='Line 29, app/controllers/calculator_controller.rb'><pre><a name='29'> 29</a>     @procedures = Procedure.all.where( 'active is true' ).order( 'display_order asc')
+</pre></code><code title='Line 30, app/controllers/calculator_controller.rb'><pre><a name='30'> 30</a>   end
+</pre></code><h3>When the user has pressed &#39;Calculate&#39;, this code runs the calculation.</h3>
+<code title='Line 33, app/controllers/calculator_controller.rb'><pre><a name='33'> 33</a>   def calculate
+</pre></code><p>Set a title for the page.</p>
+<code title='Line 36, app/controllers/calculator_controller.rb'><pre><a name='36'> 36</a> 	  @title = "Calculated scrutiny period"
+</pre></code><p>In order to calculate the scrutiny period, we need:</p>
+<ul>
 <li>the <strong>type of the procedure</strong> itself, which we refer to by a number</li>
 </ul>
-<code title='Line 43, app/controllers/calculator_controller.rb'><pre><a name='43'>43</a>     procedure = params['procedure'].to_i if params['procedure']
-</pre></code><a name='45'></a> <ul>
+<code title='Line 41, app/controllers/calculator_controller.rb'><pre><a name='41'> 41</a>     procedure = params['procedure'].to_i if params['procedure']
+</pre></code><ul>
 <li>the <strong>start date</strong>, for example: <q>2020-05-06</q></li>
 </ul>
-<code title='Line 46, app/controllers/calculator_controller.rb'><pre><a name='46'>46</a>     start_date = params['start-date']
-</pre></code><a name='48'></a> <ul>
+<code title='Line 44, app/controllers/calculator_controller.rb'><pre><a name='44'> 44</a>     start_date = params['start-date']
+</pre></code><ul>
 <li>the <strong>day count</strong></li>
 </ul>
-<code title='Line 49, app/controllers/calculator_controller.rb'><pre><a name='49'>49</a>     day_count = params['day-count']
-</pre></code><a name='51'></a> <p>Check that all the parameters have been provided by the form ...</p>
-<code title='Line 52, app/controllers/calculator_controller.rb'><pre><a name='52'>52</a>     if start_date.blank? or day_count.blank? or day_count.to_i == 0 or procedure.nil?
-</pre></code><a name='54'></a> <p>... if not, set an error message ...</p>
-<code title='Line 55, app/controllers/calculator_controller.rb'><pre><a name='55'>55</a> 	    @title = "Sorry, there was not enough information provided."
-</pre></code><a name='57'></a> <p>... and display the error.</p>
-<code title='Line 58, app/controllers/calculator_controller.rb'><pre><a name='58'>58</a>       render :template => 'calculator/not_enough_information'
-</pre></code><a name='60'></a> <p>If the form did provide all the required information, do the calculation:</p>
-<code title='Line 61, app/controllers/calculator_controller.rb'><pre><a name='61'>61</a>     else
-</pre></code><a name='63'></a> <ul>
+<code title='Line 47, app/controllers/calculator_controller.rb'><pre><a name='47'> 47</a>     day_count = params['day-count']
+</pre></code><p>Check that all the parameters have been provided by the form ...</p>
+<code title='Line 50, app/controllers/calculator_controller.rb'><pre><a name='50'> 50</a>     if start_date.blank? or day_count.blank? or day_count.to_i == 0 or procedure.nil?
+</pre></code><p>... if not, set an error message ...</p>
+<code title='Line 53, app/controllers/calculator_controller.rb'><pre><a name='53'> 53</a> 	    @title = "Sorry, there was not enough information provided."
+</pre></code><p>... and display the error.</p>
+<code title='Line 56, app/controllers/calculator_controller.rb'><pre><a name='56'> 56</a>       render :template => 'calculator/not_enough_information'
+</pre></code><p>If the form did provide all the required information, do the calculation:</p>
+<code title='Line 59, app/controllers/calculator_controller.rb'><pre><a name='59'> 59</a>     else
+</pre></code><ul>
 <li>find the procedure</li>
 </ul>
-<code title='Line 64, app/controllers/calculator_controller.rb'><pre><a name='64'>64</a>       @procedure = Procedure.find( procedure )
-</pre></code><a name='66'></a> <ul>
+<code title='Line 62, app/controllers/calculator_controller.rb'><pre><a name='62'> 62</a>       @procedure = Procedure.find( procedure )
+</pre></code><ul>
 <li>the <strong>number of days</strong> to count</li>
 </ul>
-<code title='Line 67, app/controllers/calculator_controller.rb'><pre><a name='67'>67</a>       @day_count = day_count.to_i
-</pre></code><a name='69'></a> <ul>
+<code title='Line 65, app/controllers/calculator_controller.rb'><pre><a name='65'> 65</a>       @day_count = day_count.to_i
+</pre></code><ul>
 <li>make the text of the date passed into a date format</li>
 </ul>
-<code title='Line 70, app/controllers/calculator_controller.rb'><pre><a name='70'>70</a>       @start_date = Date.parse( start_date )
-</pre></code><a name='72'></a> <p>To calculate the <strong>anticipated end date</strong>, we select the calculation based on the type of procedure:</p>
-<code title='Line 73, app/controllers/calculator_controller.rb'><pre><a name='73'>73</a>       case @procedure.id
-</pre></code><a name='75'></a> <ul>
+<code title='Line 68, app/controllers/calculator_controller.rb'><pre><a name='68'> 68</a>       @start_date = Date.parse( start_date )
+</pre></code><p>To calculate the <strong>anticipated end date</strong>, we select the calculation based on the type of procedure:</p>
+<code title='Line 71, app/controllers/calculator_controller.rb'><pre><a name='71'> 71</a>       case @procedure.id
+</pre></code><ul>
 <li>Legislative Reform Orders, Localism Orders and Public Bodies Orders</li>
 </ul>
-<code title='Line 76, app/controllers/calculator_controller.rb'><pre><a name='76'>76</a>       when 1, 2, 4
-</pre></code><code title='Line 77, app/controllers/calculator_controller.rb'><pre><a name='77'>77</a>         @end_date = bicameral_parliamentary_days_calculation( @start_date, @day_count )
-</pre></code><a name='79'></a> <ul>
+<code title='Line 74, app/controllers/calculator_controller.rb'><pre><a name='74'> 74</a>       when 1, 2, 4
+</pre></code><code title='Line 75, app/controllers/calculator_controller.rb'><pre><a name='75'> 75</a>         @end_date = bicameral_parliamentary_days_calculation( @start_date, @day_count )
+</pre></code><ul>
 <li>Proposed Statutory Instrument (PNSI)</li>
 </ul>
-<code title='Line 80, app/controllers/calculator_controller.rb'><pre><a name='80'>80</a>       when 3
-</pre></code><code title='Line 81, app/controllers/calculator_controller.rb'><pre><a name='81'>81</a>         @end_date = bicameral_first_to_ten_calculation( @start_date, @day_count )
-</pre></code><a name='83'></a> <ul>
+<code title='Line 78, app/controllers/calculator_controller.rb'><pre><a name='78'> 78</a>       when 3
+</pre></code><code title='Line 79, app/controllers/calculator_controller.rb'><pre><a name='79'> 79</a>         @end_date = bicameral_first_to_ten_calculation( @start_date, @day_count )
+</pre></code><ul>
 <li>Commons only negative Statutory Instrument and some made affirmatives</li>
 </ul>
-<code title='Line 84, app/controllers/calculator_controller.rb'><pre><a name='84'>84</a>       when 5, 7
-</pre></code><code title='Line 85, app/controllers/calculator_controller.rb'><pre><a name='85'>85</a>         @end_date = commons_praying_days_calculation( @start_date, @day_count )
-</pre></code><a name='87'></a> <ul>
+<code title='Line 82, app/controllers/calculator_controller.rb'><pre><a name='82'> 82</a>       when 5, 7
+</pre></code><code title='Line 83, app/controllers/calculator_controller.rb'><pre><a name='83'> 83</a>         @end_date = commons_praying_days_calculation( @start_date, @day_count )
+</pre></code><ul>
 <li>Commons and Lords negative Statutory Instrument or a Commons and Lords affirmative Statutory Instrument where either House is sitting</li>
 </ul>
-<code title='Line 88, app/controllers/calculator_controller.rb'><pre><a name='88'>88</a>       when 6, 9
-</pre></code><code title='Line 89, app/controllers/calculator_controller.rb'><pre><a name='89'>89</a>         @end_date = bicameral_praying_days_calculation_either_house_sitting( @start_date, @day_count ) 
-</pre></code><a name='91'></a> <ul>
+<code title='Line 86, app/controllers/calculator_controller.rb'><pre><a name='86'> 86</a>       when 6, 9
+</pre></code><code title='Line 87, app/controllers/calculator_controller.rb'><pre><a name='87'> 87</a>         @end_date = bicameral_praying_days_calculation_either_house_sitting( @start_date, @day_count ) 
+</pre></code><ul>
 <li>Commons and Lords affirmative Statutory Instrument where both Houses are sitting</li>
 </ul>
-<code title='Line 92, app/controllers/calculator_controller.rb'><pre><a name='92'>92</a>       when 8
-</pre></code><code title='Line 93, app/controllers/calculator_controller.rb'><pre><a name='93'>93</a>         @end_date = bicameral_praying_days_calculation_both_houses_sitting( @start_date, @day_count )
-</pre></code><a name='95'></a> <ul>
-<li>Treaty period A</li>
+<code title='Line 90, app/controllers/calculator_controller.rb'><pre><a name='90'> 90</a>       when 8
+</pre></code><code title='Line 91, app/controllers/calculator_controller.rb'><pre><a name='91'> 91</a>         @end_date = bicameral_praying_days_calculation_both_houses_sitting( @start_date, @day_count )
+</pre></code><ul>
+<li>Treaty periods A and B</li>
 </ul>
-<code title='Line 96, app/controllers/calculator_controller.rb'><pre><a name='96'>96</a>       when 10
-</pre></code><code title='Line 97, app/controllers/calculator_controller.rb'><pre><a name='97'>97</a>         @end_date = treaty_period_a_calculation( @start_date, @day_count )
-</pre></code><a name='99'></a> <ul>
-<li>Treaty period B</li>
-</ul>
-<code title='Line 100, app/controllers/calculator_controller.rb'><pre><a name='100'>100</a>       when 11
-</pre></code><code title='Line 101, app/controllers/calculator_controller.rb'><pre><a name='101'>101</a>         @end_date = commons_parliamentary_days_calculation( @start_date, @day_count )
-</pre></code><a name='103'></a> <ul>
+<code title='Line 94, app/controllers/calculator_controller.rb'><pre><a name='94'> 94</a>       when 10, 11
+</pre></code><code title='Line 95, app/controllers/calculator_controller.rb'><pre><a name='95'> 95</a>         @end_date = treaty_calculation( @start_date, @day_count )
+</pre></code><ul>
 <li>Otherwise set an error message.</li>
 </ul>
-<code title='Line 104, app/controllers/calculator_controller.rb'><pre><a name='104'>104</a>       else
-</pre></code><code title='Line 105, app/controllers/calculator_controller.rb'><pre><a name='105'>105</a>         @error_message = "Sorry, this procedure is not currently supported."
-</pre></code><code title='Line 106, app/controllers/calculator_controller.rb'><pre><a name='106'>106</a>       end
-</pre></code><code title='Line 107, app/controllers/calculator_controller.rb'><pre><a name='107'>107</a>     end
-</pre></code><code title='Line 108, app/controllers/calculator_controller.rb'><pre><a name='108'>108</a>   end
-</pre></code><code title='Line 109, app/controllers/calculator_controller.rb'><pre><a name='109'>109</a> end</pre></code><footer><p><big><a href="#top">&times;&times;&times;</a></big></p></footer></body></html>
+<code title='Line 98, app/controllers/calculator_controller.rb'><pre><a name='98'> 98</a>       else
+</pre></code><code title='Line 99, app/controllers/calculator_controller.rb'><pre><a name='99'> 99</a>         @error_message = "Sorry, this procedure is not currently supported."
+</pre></code><code title='Line 100, app/controllers/calculator_controller.rb'><pre><a name='100'> 100</a>       end
+</pre></code><code title='Line 101, app/controllers/calculator_controller.rb'><pre><a name='101'> 101</a>     end
+</pre></code><code title='Line 102, app/controllers/calculator_controller.rb'><pre><a name='102'> 102</a>   end
+</pre></code><code title='Line 103, app/controllers/calculator_controller.rb'><pre><a name='103'> 103</a> end</pre></code></body></html>
