--- a/public/calculator_controller.rb.html
+++ b/public/calculator_controller.rb.html
@@ -29,20 +29,20 @@ body {color:white;background-color:black;}
   </head>
   <body><h1>Calculator controller to build the form and run the calculations.</h1>
 <p>Individual calculations for different flavours of instrument are packaged into separate files. This code requires those files to be loaded.</p>
-<code title='Line 4, app/controllers/calculator_controller.rb'><pre><a name='4'> 4</a> require 'calculations/bicameral_parliamentary_days'
-</pre></code><code title='Line 5, app/controllers/calculator_controller.rb'><pre><a name='5'> 5</a> require 'calculations/pnsi'
-</pre></code><code title='Line 6, app/controllers/calculator_controller.rb'><pre><a name='6'> 6</a> require 'calculations/commons_only_si'
-</pre></code><code title='Line 7, app/controllers/calculator_controller.rb'><pre><a name='7'> 7</a> require 'calculations/bicameral_si_either_house_sitting'
-</pre></code><code title='Line 8, app/controllers/calculator_controller.rb'><pre><a name='8'> 8</a> require 'calculations/bicameral_praying_days_both_houses_sitting'
+<code title='Line 4, app/controllers/calculator_controller.rb'><pre><a name='4'> 4</a> require 'calculations/bicameral_both_houses_sitting'
+</pre></code><code title='Line 5, app/controllers/calculator_controller.rb'><pre><a name='5'> 5</a> require 'calculations/bicameral_parliamentary_days'
+</pre></code><code title='Line 6, app/controllers/calculator_controller.rb'><pre><a name='6'> 6</a> require 'calculations/bicameral_si_either_house_sitting'
+</pre></code><code title='Line 7, app/controllers/calculator_controller.rb'><pre><a name='7'> 7</a> require 'calculations/commons_only_si'
+</pre></code><code title='Line 8, app/controllers/calculator_controller.rb'><pre><a name='8'> 8</a> require 'calculations/pnsi'
 </pre></code><code title='Line 9, app/controllers/calculator_controller.rb'><pre><a name='9'> 9</a> require 'calculations/treaty'
 </pre></code><h2>The controller itself.</h2>
 <code title='Line 12, app/controllers/calculator_controller.rb'><pre><a name='12'> 12</a> class CalculatorController < ApplicationController
 </pre></code><p>Include code from each of the modules for the different styles of calculation.</p>
-<code title='Line 15, app/controllers/calculator_controller.rb'><pre><a name='15'> 15</a>   include CALCULATION_BICAMERAL_PARLIAMENTARY_DAYS
-</pre></code><code title='Line 16, app/controllers/calculator_controller.rb'><pre><a name='16'> 16</a>   include CALCULATION_PNSI
-</pre></code><code title='Line 17, app/controllers/calculator_controller.rb'><pre><a name='17'> 17</a>   include CALCULATION_COMMONS_ONLY_SI
-</pre></code><code title='Line 18, app/controllers/calculator_controller.rb'><pre><a name='18'> 18</a>   include CALCULATION_BICAMERAL_SI_EITHER_HOUSE_SITTING
-</pre></code><code title='Line 19, app/controllers/calculator_controller.rb'><pre><a name='19'> 19</a>   include CALCULATION_BICAMERAL_PRAYING_DAYS_BOTH_HOUSES_SITTING
+<code title='Line 15, app/controllers/calculator_controller.rb'><pre><a name='15'> 15</a>   include CALCULATION_BICAMERAL_BOTH_HOUSES_SITTING
+</pre></code><code title='Line 16, app/controllers/calculator_controller.rb'><pre><a name='16'> 16</a>   include CALCULATION_BICAMERAL_PARLIAMENTARY_DAYS
+</pre></code><code title='Line 17, app/controllers/calculator_controller.rb'><pre><a name='17'> 17</a>   include CALCULATION_BICAMERAL_SI_EITHER_HOUSE_SITTING
+</pre></code><code title='Line 18, app/controllers/calculator_controller.rb'><pre><a name='18'> 18</a>   include CALCULATION_COMMONS_ONLY_SI
+</pre></code><code title='Line 19, app/controllers/calculator_controller.rb'><pre><a name='19'> 19</a>   include CALCULATION_PNSI
 </pre></code><code title='Line 20, app/controllers/calculator_controller.rb'><pre><a name='20'> 20</a>   include CALCULATION_TREATY
 </pre></code><h3>This is the code to provide information for the form that users can fill in.</h3>
 <code title='Line 23, app/controllers/calculator_controller.rb'><pre><a name='23'> 23</a>   def index
@@ -91,10 +91,10 @@ body {color:white;background-color:black;}
 </pre></code><p>To calculate the <strong>anticipated end date</strong>, we select the calculation based on the type of procedure:</p>
 <code title='Line 71, app/controllers/calculator_controller.rb'><pre><a name='71'> 71</a>       case @procedure.id
 </pre></code><ul>
-<li>Legislative Reform Orders, Localism Orders and Public Bodies Orders</li>
+<li>Commons and Lords affirmative Statutory Instrument where both Houses are sitting, Legislative Reform Orders, Public Body Orders and Localism Orders</li>
 </ul>
-<code title='Line 74, app/controllers/calculator_controller.rb'><pre><a name='74'> 74</a>       when 1, 2, 4
-</pre></code><code title='Line 75, app/controllers/calculator_controller.rb'><pre><a name='75'> 75</a>         @end_date = bicameral_parliamentary_days_calculation( @start_date, @day_count )
+<code title='Line 74, app/controllers/calculator_controller.rb'><pre><a name='74'> 74</a>       when 1, 2, 4, 8
+</pre></code><code title='Line 75, app/controllers/calculator_controller.rb'><pre><a name='75'> 75</a>         @end_date = bicameral_calculation_both_houses_sitting( @start_date, @day_count )
 </pre></code><ul>
 <li>Proposed Statutory Instrument (PNSI)</li>
 </ul>
@@ -111,21 +111,16 @@ body {color:white;background-color:black;}
 <code title='Line 86, app/controllers/calculator_controller.rb'><pre><a name='86'> 86</a>       when 6, 9
 </pre></code><code title='Line 87, app/controllers/calculator_controller.rb'><pre><a name='87'> 87</a>         @end_date = bicameral_si_either_house_sitting_calculation( @start_date, @day_count ) 
 </pre></code><ul>
-<li>Commons and Lords affirmative Statutory Instrument where both Houses are sitting</li>
-</ul>
-<code title='Line 90, app/controllers/calculator_controller.rb'><pre><a name='90'> 90</a>       when 8
-</pre></code><code title='Line 91, app/controllers/calculator_controller.rb'><pre><a name='91'> 91</a>         @end_date = bicameral_praying_days_calculation_both_houses_sitting( @start_date, @day_count )
-</pre></code><ul>
 <li>Treaty periods A and B</li>
 </ul>
-<code title='Line 94, app/controllers/calculator_controller.rb'><pre><a name='94'> 94</a>       when 10, 11
-</pre></code><code title='Line 95, app/controllers/calculator_controller.rb'><pre><a name='95'> 95</a>         @end_date = treaty_calculation( @start_date, @day_count )
+<code title='Line 90, app/controllers/calculator_controller.rb'><pre><a name='90'> 90</a>       when 10, 11
+</pre></code><code title='Line 91, app/controllers/calculator_controller.rb'><pre><a name='91'> 91</a>         @end_date = treaty_calculation( @start_date, @day_count )
 </pre></code><ul>
 <li>Otherwise set an error message.</li>
 </ul>
-<code title='Line 98, app/controllers/calculator_controller.rb'><pre><a name='98'> 98</a>       else
-</pre></code><code title='Line 99, app/controllers/calculator_controller.rb'><pre><a name='99'> 99</a>         @error_message = "Sorry, this procedure is not currently supported."
-</pre></code><code title='Line 100, app/controllers/calculator_controller.rb'><pre><a name='100'> 100</a>       end
-</pre></code><code title='Line 101, app/controllers/calculator_controller.rb'><pre><a name='101'> 101</a>     end
-</pre></code><code title='Line 102, app/controllers/calculator_controller.rb'><pre><a name='102'> 102</a>   end
-</pre></code><code title='Line 103, app/controllers/calculator_controller.rb'><pre><a name='103'> 103</a> end</pre></code></body></html>
+<code title='Line 94, app/controllers/calculator_controller.rb'><pre><a name='94'> 94</a>       else
+</pre></code><code title='Line 95, app/controllers/calculator_controller.rb'><pre><a name='95'> 95</a>         @error_message = "Sorry, this procedure is not currently supported."
+</pre></code><code title='Line 96, app/controllers/calculator_controller.rb'><pre><a name='96'> 96</a>       end
+</pre></code><code title='Line 97, app/controllers/calculator_controller.rb'><pre><a name='97'> 97</a>     end
+</pre></code><code title='Line 98, app/controllers/calculator_controller.rb'><pre><a name='98'> 98</a>   end
+</pre></code><code title='Line 99, app/controllers/calculator_controller.rb'><pre><a name='99'> 99</a> end</pre></code></body></html>
