Correctly render (wrap) long preformatted code blocks on mobile.
Uses correct stylesheet property (word-break, not word-wrap).
Adds missing stylesheet property white-space.
Fixes generator as well as generated markup files.

--- a/public/bicameral_both_houses_sitting.rb.html
+++ b/public/bicameral_both_houses_sitting.rb.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-GB">
   <head>
     <meta charset="UTF-8">
@@ -18,7 +18,7 @@
       line-height: 1.4;
       color:gray;
       }
-      code pre {word-wrap: break-word;}
+      code pre {white-space: pre-wrap; word-break: break-word;}
       code:hover {color:black;}
       h1, h2 {font-weight:normal;}
       @media (prefers-color-scheme: dark) {
