--- a/public/pnsi.rb.html
+++ b/public/pnsi.rb.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en-GB">
   <head>
     <meta charset="UTF-8">
@@ -18,7 +18,7 @@
       line-height: 1.4;
       color:gray;
       }
-      code pre {word-wrap: break-word;}
+      code pre {white-space: pre-wrap; word-break: break-word;}
       code:hover {color:black;}
       h1, h2 {font-weight:normal;}
       @media (prefers-color-scheme: dark) {
